--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.6.1",
     "validator": "^13.6.0",
+    "react-chartjs-2": "^3.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
