--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
+    "chart.js": "^3.6.0",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -30,7 +32,6 @@
     "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.6.1",
     "validator": "^13.6.0",
-    "react-chartjs-2": "^3.0.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
